Fix missing space when only one expandable key-value par is shown

--- a/src/internal/components/chart-series-details/styles.scss
+++ b/src/internal/components/chart-series-details/styles.scss
@@ -19,6 +19,7 @@
 
 .value {
   text-align: right;
+  margin-left: awsui.$space-l;
   &.expandable {
     @include bold;
   }
@@ -27,10 +28,6 @@
 .list-item,
 .inner-list-item {
   list-style: none;
-}
-
-.inner-list-item > .key {
-  margin-right: awsui.$space-l;
 }
 
 .inner-list-item,
